--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "babel-loader": "^8.0.6",
         "css-loader": "^2.1.1",
         "file-loader": "^3.0.1",
+        "html-webpack-plugin": "^3.2.0",
         "style-loader": "^0.23.1",
         "url-loader": "^1.1.2",
         "vue-loader": "^15.7.0",
@@ -44,6 +45,7 @@
         "jquery": "^3.4.1",
         "npm": "^6.9.0",
         "popper.js": "^1.15.0",
-        "vue": "^2.6.10"
+        "vue": "^2.6.10",
+        "vuex": "^3.1.1"
     }
 }
