--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "webpack src/main.js dist/main.js"
+        "dev": "webpack src/main.js dist/main.js",
+        "start": "webpack-dev-server --open"
     },
     "repository": {
         "type": "git",
@@ -23,6 +24,7 @@
         "@fortawesome/fontawesome-free": "^5.8.2",
         "babel-core": "^6.26.3",
         "babel-loader": "^8.0.6",
+        "clean-webpack-plugin": "^2.0.0",
         "css-loader": "^2.1.1",
         "file-loader": "^3.0.1",
         "html-webpack-plugin": "^3.2.0",
@@ -31,7 +33,8 @@
         "vue-loader": "^15.7.0",
         "vue-template-compiler": "^2.6.10",
         "webpack": "^4.32.2",
-        "webpack-cli": "^3.3.2"
+        "webpack-cli": "^3.3.2",
+        "webpack-dev-server": "^3.5.1"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free-brands": "^5.0.13",
@@ -41,10 +44,9 @@
         "@fortawesome/free-solid-svg-icons": "^5.8.2",
         "@fortawesome/vue-fontawesome": "^0.1.6",
         "bootstrap": "^4.3.1",
-        "i": "^0.3.6",
-        "jquery": "^3.4.1",
+        "bootstrap-vue": "^2.0.0-rc.22",
         "npm": "^6.9.0",
-        "popper.js": "^1.15.0",
+        "portal-vue": "^2.1.5",
         "vue": "^2.6.10",
         "vuex": "^3.1.1"
     }
