--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
         "@fortawesome/fontawesome-svg-core": "^1.2.18",
         "@fortawesome/free-solid-svg-icons": "^5.8.2",
         "@fortawesome/vue-fontawesome": "^0.1.6",
+        "axios": "^0.19.0",
         "bootstrap": "^4.3.1",
         "bootstrap-vue": "^2.0.0-rc.22",
+        "fabric": "^3.1.0",
         "npm": "^6.9.0",
         "portal-vue": "^2.1.5",
         "vue": "^2.6.10",
