--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "PicsWall",
+    "name": "moments",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -49,7 +49,9 @@
         "fabric": "^3.1.0",
         "npm": "^6.9.0",
         "portal-vue": "^2.1.5",
+        "qs": "^6.7.0",
         "vue": "^2.6.10",
+        "vue-axios": "^2.1.4",
         "vuex": "^3.1.1"
     }
 }
