--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "babel-core": "^6.26.3",
         "babel-loader": "^8.0.6",
         "clean-webpack-plugin": "^2.0.0",
+        "copy-webpack-plugin": "^5.0.3",
         "css-loader": "^2.1.1",
         "file-loader": "^3.0.1",
         "html-webpack-plugin": "^3.2.0",
+        "mini-css-extract-plugin": "^0.7.0",
         "style-loader": "^0.23.1",
         "url-loader": "^1.1.2",
         "vue-loader": "^15.7.0",
