--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "qs": "^6.7.0",
         "vue": "^2.6.10",
         "vue-axios": "^2.1.4",
+        "vue-router": "^3.0.6",
         "vuex": "^3.1.1"
     }
 }
